tiers.css: Resolve #3: Tier-list overflow:w

--- a/tiers.css
+++ b/tiers.css
@@ -36,6 +36,8 @@ body {
 
 .tierlist {
 	width: 80%;
+  height: 80vh;
+  overflow: scroll;
 }
 
 .tierlist span {
